non primitve data types

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Page Content</h1>
     <footer></footer>
 
-    <script src="./01_variables.js"></script>
+    <script src="./02_datatypes.js"></script>
   </body>
 </html>
