--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Page Content</h1>
     <footer></footer>
 
-    <script src="./assignment1.js"></script>
+    <script src="./06_objects.js"></script>
   </body>
 </html>
